--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 <script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script>
 </head>
 
-<body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
+<body onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
     <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #023047;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
@@ -55,7 +55,7 @@
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
                         <div style="max-width: 350px;">
-                            <h1 class="text-uppercase fw-bold" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">About Us</span></strong></h1>
+                            <h1 class="text-uppercase fw-bold" style="font-family: 'Beach Resort';"><strong><span style="color: inherit;">About Us</span></strong></h1>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="fw-bold mb-3">Our Mission</h2>
+                        <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Our Mission</h2>
                         <p class="mb-4">Wave Discipleship Ministries' mission is to share His Word, tend to His Creation, and #BeAWave4Christ through technology and community.</p>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-start align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="fw-bold mb-3">Our Story</h2>
+                        <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Our Story</h2>
                         <p class="mb-4">Founded as Wave Digital Ministries in 2019, Wave Discipleship Ministries has reached over 150,000 people across 33 nations.</p>
                         <p class="mb-4">Originally focused as a web-based ministry, WDM produced educational content for web and social media. However, once entering the post-COVID era it became clear that God was directing the ministry to reshape and refocus towards in-person ministry.</p>
                         <p class="mb-4">We have only just begun the process of refocusing and building an in-person ministry, but are hopeful for what God has in store for this new season!</p>
@@ -94,7 +94,7 @@
     <div class="container py-4 py-xl-5">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <h2>Our Values</h2>
+                <h2 style="font-family: 'Beach Resort';">Our Values</h2>
             </div>
         </div>
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 d-md-flex justify-content-center justify-content-md-center justify-content-lg-end">
