--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script>
 </head>
 
-<body style="font-family: Quicksand, sans-serif;" onload="disableselect(), latest()">
+<body onload="disableselect(), latest()">
     <!-- Start: Navbar Right Links (Dark) -->
     <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #023047;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
@@ -55,7 +55,7 @@
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
                         <div style="max-width: 350px;">
-                            <h1 class="fw-bold" style="font-family: Quicksand, sans-serif;text-shadow: 0px 0px 5px #1a1a1a;font-size: 20pt;">Making waves for His Kingdom.</h1>
+                            <h1 class="fw-bold" style="font-family: 'Beach Resort';text-shadow: 0px 0px 5px #1a1a1a;font-size: 36pt;">Making waves for His Kingdom.</h1>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-center align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="fw-bold mb-3">Our Mission</h2>
+                        <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Our Mission</h2>
                         <p class="mb-4">Wave Discipleship Ministries' mission is to share His Word, tend to His Creation, and #BeAWave4Christ through technology and community.</p>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-center align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="fw-bold mb-3">Fulfilling the Call</h2>
+                        <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Fulfilling the Call</h2>
                         <p class="mb-4">We are utilizing existing technologies, such as social media, and our own technology to share God's Word over cyberspace as well as reaching out to the world via community projects and groups.</p>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
     <div class="container py-4 py-xl-5">
         <div class="row d-md-flex justify-content-md-center mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <h2>Our Projects</h2>
+                <h2 style="font-family: 'Beach Resort';">Our Projects</h2>
                 <p class="w-lg-50">We are making a difference through a variety of projects, each with a different focus.</p>
             </div>
         </div>
@@ -100,7 +100,7 @@
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_bookshelves_re_lxoy.svg">
                     <div class="px-3">
-                        <h4 style="font-family: Quicksand, sans-serif;">Courses</h4>
+                        <h4>Courses</h4>
                         <p>WDM Courses is a Biblical and ministry education platform for everyone.</p><a href="https://courses.wavedm.net/" target="_blank" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
                             </svg></a>
@@ -110,7 +110,7 @@
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_location_search_re_ttoj.svg">
                     <div class="text-dark px-3">
-                        <h4 class="text-dark" style="font-family: Quicksand, sans-serif;">MinistryConnect</h4>
+                        <h4 class="text-dark">MinistryConnect</h4>
                         <p class="text-dark">Our web tool for connecting people with local, national, and global ministries.</p><a class="link-dark" href="ministryconnect.html">Start Searching&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right text-dark">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
                             </svg></a>
@@ -120,7 +120,7 @@
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_pizza_sharing_wxop.svg">
                     <div class="px-3">
-                        <h4 style="font-family: Quicksand, sans-serif;">Act</h4>
+                        <h4>Act</h4>
                         <p>WDM Act is our outreach project to encourage Christian lifestyle as well as helping our local communities.&nbsp;</p><a href="https://act.wavedm.net" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
                             </svg></a>
@@ -130,7 +130,7 @@
             <div class="col">
                 <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_outdoor_adventure_re_j3b7.svg">
                     <div class="px-3">
-                        <h4 style="font-family: Quicksand, sans-serif;">Conservation</h4>
+                        <h4>Conservation</h4>
                         <p>We as Christians are given the duty to tend to God's Creation (Genesis 1:26). We are working to fulfill this call through a variety of tactics.</p><a href="conservation.html" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
                             </svg></a>
