--- a/webdesign.html
+++ b/webdesign.html
@@ -26,7 +26,7 @@
 <script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script>
 </head>
 
-<body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
+<body onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
     <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #023047;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
@@ -55,7 +55,7 @@
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
                         <div style="max-width: 350px;">
-                            <h1 class="text-uppercase fw-bold text-dark" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">Web Design</span></strong></h1>
+                            <h1 class="text-uppercase fw-bold text-dark" style="font-family: 'Beach Resort';"><strong><span style="color: inherit;">Web Design</span></strong></h1>
                         </div>
                     </div>
                 </div>
