--- a/surfwriters.html
+++ b/surfwriters.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en" style="font-family: Quicksand, sans-serif;">
+<html data-bs-theme="light" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -26,7 +26,7 @@
 <script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script>
 </head>
 
-<body onload="disableselect(), latest()">
+<body onload="disableselect()">
     <!-- Start: Navbar Right Links (Dark) -->
     <nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" style="background: #023047;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler text-white" data-bs-target="#navcol-5" style="color: #000;border-color: #ffffff;"><span class="visually-hidden">Toggle navigation</span><span><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-menu">
@@ -50,12 +50,12 @@
     <!-- Start: Hero Parallax -->
     <section>
         <!-- Start: Parallax Background -->
-        <div data-bss-disabled-mobile="true" data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/wave.png&quot;) center;">
+        <div data-bss-disabled-mobile="true" data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;assets/img/kiril-dobrev-b1spfKX5xz0-unsplash.jpg&quot;) top;">
             <div class="container h-100">
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
                         <div style="max-width: 350px;">
-                            <h1 class="fw-bold" style="font-family: 'Beach Resort';text-shadow: 0px 0px 5px #1a1a1a;font-size: 36pt;">Making waves for His Kingdom.</h1>
+                            <h1 class="fw-bold text-white" style="font-family: 'Beach Resort';"><strong><span style="color: inherit;">Surf Writers</span></strong></h1>
                         </div>
                     </div>
                 </div>
@@ -68,90 +68,64 @@
             <div class="row h-100">
                 <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-center align-items-md-center justify-content-xl-center">
                     <div>
-                        <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Our Mission</h2>
-                        <p class="mb-4">Wave Discipleship Ministries' mission is to share His Word, tend to His Creation, and #BeAWave4Christ through technology and community.</p>
+                        <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">A Christian Writing Club</h2>
+                        <p class="mb-4">Develop your writing skills, share ideas, grow your Christian community</p>
                     </div>
                 </div>
             </div>
         </div>
     </section><!-- End: Hero Banner -->
     <!-- Start: Hero Banner -->
-    <section class="d-md-flex justify-content-md-center py-4 py-xl-5">
-        <div class="container h-100">
-            <div class="row h-100">
-                <div class="col-md-10 col-xl-8 text-center d-flex d-sm-flex d-md-flex justify-content-center align-items-center mx-auto justify-content-md-center align-items-md-center justify-content-xl-center">
+    <section class="py-4 py-xl-5">
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_writer_q06d.svg" width="60%"></p>
+                </div>
+                <div class="col-md-6 d-lg-flex align-items-lg-center">
                     <div>
-                        <h2 class="fw-bold mb-3" style="font-family: 'Beach Resort';">Fulfilling the Call</h2>
-                        <p class="mb-4">We are utilizing existing technologies, such as social media, and our own technology to share God's Word over cyberspace as well as reaching out to the world via community projects and groups.</p>
+                        <h3>Writing Skills</h3>
+                        <p>Learn from other writers as you develop your own writing style.</p>
                     </div>
                 </div>
             </div>
-        </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_counting_stars_re_smvv.svg" width="60%"></p>
+                </div>
+                <div class="col-md-6 d-lg-flex align-items-lg-center">
+                    <div>
+                        <h3>Share Your Ideas</h3>
+                        <p>Get feedback from other writers on how you can improve your work and develop concepts.</p>
+                    </div>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_pizza_sharing_wxop.svg" width="60%"></p>
+                </div>
+                <div class="col-md-6 d-lg-flex align-items-lg-center">
+                    <div>
+                        <h3>Grow Community</h3>
+                        <p>Develop a community with Christians who have similar hobbies.</p>
+                    </div>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 1 Column -->
+        <div class="container">
+            <div class="row" style="margin-top: 25px;">
+                <div class="col-md-12 d-lg-flex justify-content-lg-center"><a class="btn btn-primary" role="button" style="color: #ffffff;font-family: 'Beach Resort';font-size: 24pt;border-radius: 100px;border-style: none;" href="https://tally.so/r/3lBKO6" target="_blank" rel="external">Start a Chapter</a></div>
+            </div>
+        </div><!-- End: 1 Row 1 Column -->
     </section><!-- End: Hero Banner -->
-    <!-- Start: Features Centered Icons -->
-    <div class="container py-4 py-xl-5">
-        <div class="row d-md-flex justify-content-md-center mb-5">
-            <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <h2 style="font-family: 'Beach Resort';">Our Projects</h2>
-                <p class="w-lg-50">We are making a difference through a variety of projects, each with a different focus.</p>
-            </div>
-        </div>
-        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 justify-content-center">
-            <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_bookshelves_re_lxoy.svg">
-                    <div class="px-3">
-                        <h4>Courses</h4>
-                        <p>WDM Courses is a Biblical and ministry education platform for everyone.</p><a href="https://courses.wavedm.net/" target="_blank" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
-                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
-                            </svg></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_location_search_re_ttoj.svg">
-                    <div class="text-dark px-3">
-                        <h4 class="text-dark">MinistryConnect</h4>
-                        <p><span class="badge bg-primary" style="font-family: 'Beach Resort';font-size: 16px;">Big Update</span></p>
-                        <p class="text-dark">Our web tool for connecting people with local, national, and global ministries.</p><a class="link-dark" href="ministryconnect.html">Start Searching&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right text-dark">
-                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
-                            </svg></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_pizza_sharing_wxop.svg">
-                    <div class="px-3">
-                        <h4>Act</h4>
-                        <p>WDM Act is our outreach project to encourage Christian lifestyle as well as helping our local communities.&nbsp;</p><a href="https://act.wavedm.net" style="color: var(--bs-body-color);" target="_blank">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
-                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
-                            </svg></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_outdoor_adventure_re_j3b7.svg">
-                    <div class="px-3">
-                        <h4>Conservation</h4>
-                        <p><span class="badge bg-primary" style="font-family: 'Beach Resort';font-size: 16px;">New</span></p>
-                        <p>We as Christians are given the duty to tend to God's Creation (Genesis 1:26). We are working to fulfill this call through a variety of tactics.</p><a href="conservation.html" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
-                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
-                            </svg></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="text-center d-flex flex-column align-items-center align-items-xl-center"><img width="150px" height="150px" src="assets/img/illustrations/undraw_writer_q06d.svg">
-                    <div class="px-3">
-                        <h4>Surf Writers</h4>
-                        <p><span class="badge bg-primary" style="font-family: 'Beach Resort';font-size: 16px;">Coming Soon</span></p>
-                        <p>Our Christian writing club to develop your writing skills, share ideas, and grow your Christian community.</p><a href="conservation.html" style="color: var(--bs-body-color);">Learn More&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
-                                <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"></path>
-                            </svg></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div><!-- End: Features Centered Icons -->
     <!-- Start: Footer Dark -->
     <footer class="text-center bg-dark" style="background: #273043;">
         <div class="container text-white py-4 py-lg-5">
